samples/_failures_safe/1761511965_e3ec1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6568db5d.c: In function ‘main’:
./samples/SAFE/__tmp_6568db5d.c:176:9: error: expected declaration or statement at end of input
  176 |         free_matrix(mat1);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6568db5d.c:176:9: error: expected declaration or statement at end of input
